fixup! Add connect page, cleanup landing a bit

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,7 +2,7 @@ header.cover {
     background-position: 50% 70%;
 }
 
-header.cover h1,
+header.cover h1.f-subheadline-l,
 nav a.f3 {
     font-family: 'Bebas Neue', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
