--- a/layouts/partials/head-additions.html
+++ b/layouts/partials/head-additions.html
@@ -1,4 +1,19 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link rel="dns-prefetch" href="https://tile.openstreetmap.org">
+<link rel="dns-prefetch preconnect" href="https://unpkg.com" />
+
+<!-- Font: Bebas Neue -->
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+<!-- Custom CSS -->
 <link rel="stylesheet" href='{{ "css/custom.css" | absURL }}'>
+
+<!-- leaflet-ui -->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet-ui@0.5.6/dist/leaflet-ui.js"></script>
+
+<!-- leaflet-elevation -->
+<link rel="stylesheet" href="https://unpkg.com/@raruto/leaflet-elevation@2.2.4/dist/leaflet-elevation.min.css" />
+<script src="https://unpkg.com/@raruto/leaflet-elevation@2.2.4/dist/leaflet-elevation.min.js"></script>
