--- a/layouts/shortcodes/leaflet-elevation.html
+++ b/layouts/shortcodes/leaflet-elevation.html
@@ -26,7 +26,7 @@
                     position: "bottomleft",
                     detached: true,
                     summary: "inline",
-                    imperial: true,
+                    imperial: false, // `true` does not convert altitudes correctly.
 
                     altitude: true,
                     speed: "disabled",
