replace twitter with bluesky

--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -3,6 +3,6 @@
     <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://github.com/sfcriticalmass/sfcriticalmass.github.io" target="_blank" >
       Contribute on GitHub
     </a>
-    <div>{{ partial "social-follow.html" . }}</div>
+    <div>{{ partial "social/follow.html" . }}</div>
   </div>
 </footer>
